# monte-carlo-tree-search

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: connect_two.py
src/mcts/: action.py  node.py  state.py  tree.py
src/mcts.egg-info/: PKG-INFO  SOURCES.txt
