[project]
name = "mcts"
version = "0.0.1"
authors = [
  { name="Patrick McQuay", email="patrick.mcquay@gmail.com" },
]
description = "Monte Carlo Tree Search package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SnarkAttack/monte-carlo-tree-search"
Issues = "https://github.com/SnarkAttack/monte-carlo-tree-search/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"